JSW Devsb/src/objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Kurnool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tirupati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vijayawada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GHMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telengana State</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>Owner:User.EmployeeNumber</formula>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.UserRole.Name</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_State__c</fullName>
        <label>Sub-State</label>
        <picklist>
            <picklistValues>
                <fullName>North Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rayalaseema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GHMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telengana State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bellary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mysore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Erode Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madurai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondicherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trichy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vellore</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TSO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Hyderabad East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rangareddy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mahboobnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagarkurnool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gadwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nalgonda North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nalgonda South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medak East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medak West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nandyal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kurnool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KGY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cudappah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prodattur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantpur 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantpur 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tirupati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madanappalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nellore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chirala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vijayawada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machlipatnam</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Zone 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zone 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Territory_Code__c</columns>
        <columns>NAME</columns>
        <columns>Districts__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_State__c</columns>
        <columns>State_Master__c</columns>
        <columns>Zone__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>